--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "sit725-2024-t1-prac5",
+  "name": "sit725-2024-t1-prac6",
   "version": "1.0.0",
   "description": "demo",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --reporter spec",
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git https://github.com/SindhujaReddy06/SIT725-2024-T1-Prac5.git"
+    "url": "git https://github.com/SindhujaReddy06/SIT725-2024-T1-Prac6.git"
   },
   "author": "sindhuja",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SindhujaReddy06/SIT725-2024-T1-Prac5/issues"
+    "url": "https://github.com/SindhujaReddy06/SIT725-2024-T1-Prac6/issues"
   },
-  "homepage": "https://github.com/SindhujaReddy06/SIT725-2024-T1-Prac5#readme",
+  "homepage": "https://github.com/SindhujaReddy06/SIT725-2024-T1-Prac6#readme",
   "dependencies": {
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
-    "server.js": "^1.0.0"
+    "needle": "^3.3.1",
+    "server.js": "^1.0.0",
+    "superagent": "^8.1.2"
+  },
+  "devDependencies": {
+    "chai": "^5.1.0",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.4.0",
+    "request": "^2.88.2"
   }
 }
